New links to docs instead phpBB
First commit for testing links.

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -206,6 +206,8 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
+                <div><a href="docs/software/desktop/#chromium" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
 								<div><span>Pros:</span>Excellent performance, stability and standards support.</div>
 								<div><span>Cons:</span>TBA</div>
 							</div>
@@ -235,7 +237,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="phpbb/viewtopic.php?p=408#p408" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b></a></div>
+								<div><a href="docs/software/remote_desktop/#tigervnc-server" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Efficient, lightweight VNC server</div>
 								<div><span>Cons:</span>TBA</div>
@@ -293,16 +295,10 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=80#p4149" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>N/A
-								</div>
-								<div>
-									<span>Cons:</span>N/A
-								</div>
+								<div><a href="docs/software/remote_desktop/#realvnc-server" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>N/A</div>
+								<div><span>Cons:</span>N/A</div>
 							</div>
 							<p>Run a Desktop environment on your device that can be accessed remotely, over the network. Great for headless devices, RealVNC also supports shared desktop mode.</p>
 						</div>
@@ -319,16 +315,10 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5#p43" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>All in one, feature-rich Media Centre
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="docs/software/media/#kodi" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>All in one, feature-rich Media Centre</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>The only media centre/player you'll ever need.</p>
 						</div>
@@ -344,16 +334,10 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5#p50" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Lightweight, efficient, no frills.
-								</div>
-								<div>
-									<span>Cons:</span>Lacks library features, offered by others (e.g.: LMS/Mopidy/O!MPD etc).
-								</div>
+								<div><a href="docs/software/media/#ympd" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Lightweight, efficient, no frills.</div>
+								<div><span>Cons:</span>Lacks library features, offered by others (e.g.: LMS/Mopidy/O!MPD etc).</div>
 							</div>
 							<p>A lightweight, bare-bones, no frills HiFi music player with a web based interface. Select or search for a song and play it, simple and effective. If you are seeking the highest raw performance audio playback, without bloatware and additional processing, YMPD is highly recommended. YMPD is a front end for MPD.</p>
 						</div>
@@ -370,16 +354,10 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=5171#p5171" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Feature rich library management system.
-								</div>
-								<div>
-									<span>Cons:</span>PHP based. Significant performance impact with large music libraries.
-								</div>
+								<div><a href="docs/software/media/#ompd" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Feature rich library management system.</div>
+								<div><span>Cons:</span>PHP based. Significant performance impact with large music libraries.</div>
 							</div>
 							<p>A feature-rich web interface audio player for MPD. Includes song/album scraping, ideal for music catalog browsing.</p>
 						</div>
@@ -396,16 +374,10 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=3928#p3928" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Console-based Audio Visualizer!
-								</div>
-								<div>
-									<span>Cons:</span>Performance over SSH is reduced.
-								</div>
+								<div><a href="docs/software/media/#cava" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Console-based Audio Visualizer!</div>
+								<div><span>Cons:</span>Performance over SSH is reduced.</div>
 							</div>
 							<p>Console-based Audio Visualizer for MPD. Can be displayed in SSH terminals, consoles and LCD HATS.</p>
 						</div>
@@ -421,16 +393,10 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=80#p3611" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Feature-rich, highly customisable.
-								</div>
-								<div>
-									<span>Cons:</span>N/A.
-								</div>
+								<div><a href="docs/software/media/#mopidy" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Feature-rich, highly customisable.</div>
+								<div><span>Cons:</span>N/A.</div>
 							</div>
 							<p>A feature-rich python based music player with a web based interface. Mopidy is also highly customisable and supports various extensions from web extensions to backend extensions.</p>
 						</div>
@@ -446,16 +412,10 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=11280#p11280" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Feature rich media streaming server with a web interface.
-								</div>
-								<div>
-									<span>Cons:</span>Coded in JAVA, slow performance, high memory consumption.
-								</div>
+                <div><a href="docs/software/media/#airsonic" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Feature rich media streaming server with a web interface.</div>
+								<div><span>Cons:</span>Coded in JAVA, slow performance, high memory consumption.</div>
 							</div>
 							<p>Airsonic is a free, web-based media streamer, providing ubiquitous access to your music. Use it to share your music with friends, or to listen to your own music while at work. You can stream to multiple players simultaneously, for instance to one player in your kitchen and another in your living room.</p>
 						</div>
@@ -3038,13 +2998,12 @@ Perfect for users requiring anonymity and privacy.</p>
 								<h3>LXQt</h3>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
-							<div class="project-info">
-								<div>
-									<span>Pros:</span>Lightweight, slick, fast and functional desktop
-								</div>
-								<div>
-									<span>Cons:</span>More resource usage, compared to LXDE.
-								</div>
+
+              <div class="project-info">
+								<div><a href="docs/software/desktop/#lxqt" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+                <div><span>Pros:</span>Lightweight, slick, fast and functional desktop</div>
+								<div><span>Cons:</span>More resource usage, compared to LXDE.</div>
 							</div>
 							<p>Slick and feature rich, lightweight desktop. If you are seeking a good performance desktop that looks and feels slick, LXQt is all you need. @Fourdee (Daniel's) daily driver desktop!</p>
 							<div class="project-title"></div>
