--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -105,7 +105,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/desktop/#lxde" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/desktop/#lxde" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Ultra lightweight, fast and functional desktop</div>
 								<div><span>Cons:</span>TBA</div>
@@ -131,7 +131,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/desktop/#mate" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/desktop/#mate" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Lightweight, feature-rich</div>
 								<div><span>Cons:</span>TBA</div>
@@ -156,7 +156,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/desktop/#xfce" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/desktop/#xfce" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Lightweight, feature-rich</div>
 								<div><span>Cons:</span>Reduced performance, when compared to LXDE/MATE.</div>
@@ -181,7 +181,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/desktop/#gnustep" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/desktop/#gnustep" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Unique, alternative appearance</div>
 								<div><span>Cons:</span>Lacks popularity</div>
@@ -206,7 +206,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/desktop/#chromium" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/desktop/#chromium" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Excellent performance, stability and standards support.</div>
 								<div><span>Cons:</span>TBA</div>
@@ -237,7 +237,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/remote_desktop/#tigervnc-server" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/remote_desktop/#tigervnc-server" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Efficient, lightweight VNC server</div>
 								<div><span>Cons:</span>TBA</div>
@@ -256,7 +256,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/remote_desktop/#nomachine" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/remote_desktop/#nomachine" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Feature rich remote desktop server</div>
 								<div><span>Cons:</span>TBA</div>
@@ -276,7 +276,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/remote_desktop/#xrdp" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/remote_desktop/#xrdp" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Supports Windows Remote Desktop Client.</div>
 								<div><span>Cons:</span>TBA</div>
@@ -295,7 +295,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/remote_desktop/#realvnc-server" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/remote_desktop/#realvnc-server" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>N/A</div>
 								<div><span>Cons:</span>N/A</div>
@@ -315,7 +315,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/media/#kodi" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/media/#kodi" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>All in one, feature-rich Media Centre</div>
 								<div><span>Cons:</span>TBA</div>
@@ -334,7 +334,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/media/#ympd" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/media/#ympd" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Lightweight, efficient, no frills.</div>
 								<div><span>Cons:</span>Lacks library features, offered by others (e.g.: LMS/Mopidy/O!MPD etc).</div>
@@ -354,7 +354,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/media/#ompd" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/media/#ompd" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Feature rich library management system.</div>
 								<div><span>Cons:</span>PHP based. Significant performance impact with large music libraries.</div>
@@ -374,7 +374,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/media/#cava" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/media/#cava" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Console-based Audio Visualizer!</div>
 								<div><span>Cons:</span>Performance over SSH is reduced.</div>
@@ -393,7 +393,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/media/#mopidy" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/media/#mopidy" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Feature-rich, highly customisable.</div>
 								<div><span>Cons:</span>N/A.</div>
@@ -412,7 +412,7 @@
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/media/#airsonic" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/media/#airsonic" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Feature rich media streaming server with a web interface.</div>
 								<div><span>Cons:</span>Coded in JAVA, slow performance, high memory consumption.</div>
@@ -2999,7 +2999,7 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div><a href="docs/software/desktop/#lxqt" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<div><a href="https://dietpi.com/docs/software/desktop/#lxqt" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
 								<br>
 								<div><span>Pros:</span>Lightweight, slick, fast and functional desktop</div>
 								<div><span>Cons:</span>More resource usage, compared to LXDE.</div>
