--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -1130,16 +1130,10 @@ Its old, retro, and a classic etc, but I doubt you'll to find a recent and simil
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5#p48" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Web interface to view and control your RPi camera
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="https://dietpi.com/docs/software/camera/#rpi-cam-control" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Web interface to view and control your RPi camera</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>Got a RPi camera module?
 Want to record paint drying using time lapse, or, start your own neighbourhood watch surveillance system? Want full control of your RPi camera in a web based interface. This is all you need!</p>
@@ -1156,16 +1150,10 @@ Want to record paint drying using time lapse, or, start your own neighbourhood w
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=100#p6610" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Motion detection & web interface control for your camera
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="https://dietpi.com/docs/software/camera/#motioneye" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Motion detection & web interface control for your camera</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>Web interface and surveillance for your RPi/USB camera. Mainly focused towards motion detection usage</p>
 						</div>
@@ -1181,16 +1169,10 @@ Want to record paint drying using time lapse, or, start your own neighbourhood w
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5#p47" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Private cloud/storage that YOU control.
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="https://dietpi.com/docs/software/cloud/#owncloud" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Private cloud/storage that YOU control.</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>Your very own personal cloud based backup/data storage system (e.g.: Dropbox) with ownCloud.</p>
 						</div>
@@ -1206,16 +1188,10 @@ Want to record paint drying using time lapse, or, start your own neighbourhood w
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=3026#p3026" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Private cloud/storage that YOU control.
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="https://dietpi.com/docs/software/cloud/#nextcloud" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Private cloud/storage that YOU control.</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>Your very own personal cloud based backup/data storage system (e.g.: Dropbox), with a slick and simple web interface.</p>
 						</div>
@@ -1231,16 +1207,10 @@ Want to record paint drying using time lapse, or, start your own neighbourhood w
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=1064#p1064" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Feature-rich
-								</div>
-								<div>
-									<span>Cons:</span>Web server required
-								</div>
+								<div><a href="https://dietpi.com/docs/software/cloud/#pydio" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Feature-rich</div>
+								<div><span>Cons:</span>Web server required</div>
 							</div>
 							<p>Feature-rich backup and sync server with web interface. Similar to ownCloud with vast configuration options to meet your "cloud" needs.</p>
 						</div>
@@ -1256,16 +1226,10 @@ Want to record paint drying using time lapse, or, start your own neighbourhood w
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=65#p65" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Remote network backup system
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/cloud/#urbackup" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Remote network backup system</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>Open Source client/server backup system, that through a combination of image and file backups accomplishes both data safety and a fast restoration time.
 TLDR: Basically, it allows you to create a complete system backup, using a simple web interface, for systems on your network.</p>
@@ -1282,16 +1246,10 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=70#p2187" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Host your own GitHub style server
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/cloud/#gogs" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Host your own GitHub style server</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>Your very own GitHub style server, with web interface.</p>
 						</div>
@@ -1307,16 +1265,10 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=9863#p9863" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Host your own GitHub style server
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/cloud/#gitea" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Host your own GitHub style server</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>Your very own GitHub style server, with web interface.</p>
 						</div>
@@ -1332,16 +1284,10 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=70#p2363" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Lightweight backup server
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/cloud/#syncthing" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Lightweight backup server</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>Backup and sync server with web interface. Extremely lightweight and efficient as no web server is required.</p>
 						</div>
@@ -1357,16 +1303,10 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=9121#p9121" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>TBA
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="https://dietpi.com/docs/software/cloud/#minio" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>TBA</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>TBA</p>
 						</div>
@@ -1382,16 +1322,10 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=5#p51" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Well established and stable forum server
-								</div>
-								<div>
-									<span>Cons:</span>Somewhat bulky installation, due to web server requirement
-								</div>
+								<div><a href="https://dietpi.com/docs/software/social/#phpbb" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Well established and stable forum server</div>
+								<div><span>Cons:</span>Somewhat bulky installation, due to web server requirement</div>
 							</div>
 							<p>If you always wanted your very own forum, phpBB is all you need.</p>
 						</div>
@@ -1407,16 +1341,10 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=30#p395" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Go go gadget website!
-								</div>
-								<div>
-									<span>Cons:</span>Somewhat bulky installation, due to web server requirement
-								</div>
+								<div><a href="https://dietpi.com/docs/software/social/#wordpress" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Go go gadget website!</div>
+								<div><span>Cons:</span>Somewhat bulky installation, due to web server requirement</div>
 							</div>
 							<p>WordPress is a state-of-the-art semantic personal publishing platform with a focus on aesthetics, web standards, and usability. Allowing you to create your own website.</p>
 						</div>
@@ -1432,16 +1360,10 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=40#p480" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Simple, effective, image hosting server
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/social/#single-file-php-gallery" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Simple, effective, image hosting server</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>Allows you to host and browse your images from a web interface.</p>
 						</div>
@@ -1457,16 +1379,10 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=50#p1502" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>None
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/social/#baikal" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>None</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>Lightweight CalDAV + CardDAV server.</p>
 						</div>
@@ -1482,16 +1398,10 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?p=1796#p1796" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>TBA
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="https://dietpi.com/docs/software/social/#openbazaar" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>TBA</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>A free decentralized peer to peer market server for all. No fees. Using Bitcoin.
 Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins </p>
@@ -1508,16 +1418,10 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="phpbb/viewtopic.php?f=8&t=5&start=90#p6202" target="_blank" rel="noopener"><span>Once installed:</span> <i class="fa fa-info"></i>&nbsp;&nbsp;&nbsp;<b style="color:white;font-size:125%;">How do I use this software?</b> </a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>TBA
-								</div>
-								<div>
-									<span>Cons:</span>TBA
-								</div>
+								<div><a href="https://dietpi.com/docs/software/social/#yacy" target="_blank" rel="noopener"><span>How to Setup / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%">View</u></a></div>
+								<br>
+								<div><span>Pros:</span>TBA</div>
+								<div><span>Cons:</span>TBA</div>
 							</div>
 							<p>Decentralized open source search engine. Essentially, "peer 2 peer" Google search engine, not controlled by Google.</p>
 						</div>
